--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,30 @@
 body {
-    background-color: aquamarine;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+header {
+    display: flex;
+    gap: 200px;
+    justify-content: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+header > a {
+    margin-top: 40px;
+}
+
+nav > ul {
+    display: flex;
+    margin-right: 100px;
+    margin-top: 40px;
+    gap: 60px;
+    list-style: none;
+}
+
+nav > ul li:first-child {
+    text-decoration: underline;
 }
