--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,7 @@
 body {
-    background-color: aquamarine;
+  background-color: aquamarine;
+  font-family: "Indie Flower", cursive;
+  font-family: "Lato", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
