--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,10 @@ body {
   box-sizing: border-box;
 }
 
+.container {
+  display: none;
+}
+
 header {
   display: flex;
   gap: 200px;
@@ -27,4 +31,60 @@ nav > ul {
 
 nav > ul li:first-child {
   text-decoration: underline;
+}
+
+#comment-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  width: 60%;
+  margin: 10px auto;
+  padding-bottom: 2rem;
+}
+
+.comment-wrapper {
+  position: relative;
+}
+
+.close-comment {
+  background-color: #fff;
+  border: none;
+  font-size: 2.8rem;
+  position: absolute;
+  right: -45px;
+  top: 30px;
+  cursor: pointer;
+  font-weight: 900;
+}
+
+.input-comment > input {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 3px solid black;
+}
+
+.message-comment > textarea {
+  padding: 20px;
+  border: 3px solid black;
+  box-shadow: 2px 3px black;
+}
+
+.comment-button {
+  padding: 5px 8px;
+  margin-top: 20px;
+  border: 2px solid black;
+  box-shadow: 2px 3px black;
+  font-size: 1.2rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.comment-text {
+  text-align: center;
+}
+
+.comment-rows {
+  display: flex;
+  gap: 60px;
 }
