fixed webhint errors

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,15 +11,19 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   padding: 20px;
+  gap: 20px;
 }
 
 .card {
+  width: 99%;  
   background-color: rgb(108, 121, 132);
   border-radius: 8px;
-  margin: 9px;
+  margin: auto;
 }
 
 .card:hover {
+width: 100%;
+  margin: auto;
   transition: 0.6s;
 }
 
