Implement a reservation pop-up

--- a/src/css/comment.css
+++ b/src/css/comment.css
@@ -67,7 +67,7 @@ h2 {
   padding-left: 10px;
   outline: none;
   background-color: white;
-  color: aquamarine;
+  color: rgb(0, 0, 0);
 }
 
 .com-form button {
