--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,10 +58,7 @@ header {
 footer {
   width: calc(100% - 24px);
   padding: 30px 10px;
-  margin: 0 auto;
-  background-color: aquamarine;
   color: black;
-  text-align: center;
   font-weight: bolder;
 }
 
@@ -69,6 +66,7 @@ footer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   margin-top: 6em;
+  gap: 30px;
 }
 
 .item {
@@ -108,9 +106,9 @@ footer {
 
 .comment-and-like {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  gap: 0 1em;
+  gap: 10px;
 }
 
 .p-like {
