--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,6 +48,7 @@ footer {
   font-weight: bolder;
   margin-top: 20px;
   background-color: rgb(215, 219, 219);
+  text-align: center;
 }
 
 .grid-cards-container {
@@ -55,6 +56,7 @@ footer {
   grid-template-columns: repeat(4, 1fr);
   margin-top: 6em;
   gap: 30px;
+  padding: 50px;
 }
 
 .item {
